changed "const API_URL" to Cloudflare worker

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ img { max-width: 130px; height: auto; opacity: 0.92; }
  * Replace API_URL with your Apps Script Web App /exec URL after you deploy it.
  * It must be the "Anyone" accessible deployment if you want client-side fetch without auth friction.
  */
-const API_URL = "https://script.google.com/macros/s/AKfycbyUxYJpwUv0AXWIgiTQ-rA8uy27LrnbhAPZ7o4sSKP4Go9T5mEQ5ZUn_mRbblWvYdgIUA/exec";
+const API_URL = "https://budget-app.kardian.workers.dev/";
 
 // If you enable an API key in Code.gs (recommended), set it here too.
 const API_KEY = ""; // e.g. "your-long-random-string"
