--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 :root {
   --bg-color: #f4f6f9;
   --card-bg: #ffffff;
+  --card-accent: #eef2ff; /* expenses card accent */
   --primary: #2563eb;
   --primary-hover: #1d4ed8;
   --text-main: #111827;
@@ -71,10 +72,16 @@ body {
 
 h1 {
   text-align: center;
-  margin: 0 0 1.25rem 0;
+  margin: 0 0 0.75rem 0;
   font-size: 1.9rem;
   font-weight: 900;
   letter-spacing: -0.015em;
+}
+
+.top-status {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 1rem 0;
 }
 
 .card {
@@ -84,6 +91,11 @@ h1 {
   margin-bottom: 1.25rem;
   box-shadow: 0 12px 24px rgba(0,0,0,0.06);
   border: 1px solid rgba(17,24,39,0.05);
+}
+
+.card.expenses-card {
+  background: var(--card-accent);
+  border: 1px solid rgba(37, 99, 235, 0.18);
 }
 
 .summary-row {
@@ -108,15 +120,16 @@ h2 {
 .form-group-vertical {
   display: flex;
   flex-direction: column;
-  gap: 0.9rem;
-  margin-bottom: 1rem;
+  gap: 0.75rem;
+  margin-bottom: 0.9rem;
 }
 
 input {
   width: 100%;
-  min-height: var(--tap-min);
-  padding: 0.85rem 1rem;
-  font-size: 1.05rem;
+  /* More compact while readable */
+  min-height: 44px;
+  padding: 0.6rem 0.9rem;
+  font-size: 1.02rem;
   border-radius: 0.85rem;
   border: 1px solid var(--border-color);
   text-align: center;
@@ -165,12 +178,6 @@ button:disabled {
   line-height: 1.35;
 }
 
-.status-row {
-  display: flex;
-  justify-content: center;
-  margin-top: 0.85rem;
-}
-
 .pill {
   display: inline-flex;
   align-items: center;
@@ -185,27 +192,17 @@ button:disabled {
 .pill.offline { color: var(--warning); }
 .pill.syncing { color: var(--primary); }
 .pill.bad     { color: var(--danger); }
-
-.pending-list {
-  margin: 1rem 0 0 0;
-  padding-left: 1.25rem;
-  font-size: 0.95rem;
-}
-
-.pending-list li { margin: 0.45rem 0; }
-
-.pending-empty {
-  margin-top: 0.65rem;
-  text-align: center;
-  color: var(--text-muted);
-  font-size: 0.95rem;
-}
 </style>
 </head>
 
 <body>
 <div class="container">
   <h1>Budget Tracker</h1>
+
+  <!-- MOVED STATUS PILL HERE -->
+  <div class="top-status">
+    <span class="pill" id="netStatusPill">Checking…</span>
+  </div>
 
   <div class="card">
     <div class="summary-row">
@@ -220,13 +217,9 @@ button:disabled {
       <div>Gas Remaining</div>
       <span id="gasRemaining">$0.00</span>
     </div>
-
-    <div class="status-row">
-      <span class="pill" id="netStatusPill">Checking…</span>
-    </div>
   </div>
 
-  <div class="card">
+  <div class="card expenses-card">
     <h2>Enter Expenses / Refunds</h2>
 
     <div class="form-group-vertical">
@@ -242,12 +235,6 @@ button:disabled {
       Tip: enter negative values for refunds or to add money back.
     </div>
   </div>
-
-  <div class="card">
-    <h2>Pending Offline Transactions</h2>
-    <ul id="pendingList" class="pending-list"></ul>
-    <div id="pendingEmpty" class="pending-empty">None</div>
-  </div>
 </div>
 
 <script>
@@ -259,10 +246,7 @@ const API_BASE = "https://budgetapp-api.kardian.workers.dev";
 const AUTH_TOKEN = "K7QvN2P9x0MZyJHcF4rW8E5U1R_AkDqB3aSXTGm6nVfLw-heCpd";
 const SW_VERSION = "2026-01-13-1";
 
-// Reduce console noise in daily use
 const DEBUG_LOGS = false;
-
-// Defaults (dollars)
 const DEFAULT_BUDGETS = { food: 500, fun: 300, gas: 200 };
 
 /* =========================================================
@@ -279,9 +263,6 @@ const submitBtn = document.getElementById('submitBtn');
 const foodRemainingEl = document.getElementById('foodRemaining');
 const funRemainingEl = document.getElementById('funRemaining');
 const gasRemainingEl = document.getElementById('gasRemaining');
-
-const pendingListEl = document.getElementById('pendingList');
-const pendingEmptyEl = document.getElementById('pendingEmpty');
 
 const successMsg = document.getElementById('successMsg');
 
@@ -321,7 +302,6 @@ let isSyncing = false;
   req.onsuccess = async (e) => {
     db = e.target.result;
     await cleanupLegacyOutbox();
-    loadPending();
     loadSummary().catch(console.error);
   };
   req.onerror = () => console.error('IndexedDB error');
@@ -396,7 +376,12 @@ async function apiGet(path) {
 
 async function apiHealth() {
   setApiStatus(`API: health…`, false);
-  const resp = await fetch(`${API_BASE}/api/health`, { method: "GET", mode: "cors", cache: "no-store" });
+
+  const resp = await fetch(`${API_BASE}/api/health`, {
+    method: "GET",
+    mode: "cors",
+    cache: "no-store"
+  });
 
   const text = await resp.text();
   let json;
@@ -593,55 +578,12 @@ async function loadSummary() {
 }
 
 /* =========================================================
-   PENDING LIST (IndexedDB tx)
+   OUTBOX
    ========================================================= */
-
-function loadPending() {
-  if (!db) return;
-
-  const store = db.transaction('tx', 'readonly').objectStore('tx');
-  const items = [];
-
-  store.openCursor().onsuccess = e => {
-    const c = e.target.result;
-    if (c) {
-      items.push(c.value);
-      c.continue();
-    } else {
-      items.reverse();
-      renderPending(items);
-    }
-  };
-}
-
-function renderPending(items) {
-  pendingListEl.innerHTML = '';
-
-  if (!items.length) {
-    pendingEmptyEl.style.display = 'block';
-    return;
-  }
-
-  pendingEmptyEl.style.display = 'none';
-
-  for (const it of items) {
-    const totals = { food: 0, fun: 0, gas: 0 };
-
-    for (const exp of (it.items || [])) {
-      if (exp.category_key in totals) totals[exp.category_key] += exp.amount;
-    }
-
-    const li = document.createElement('li');
-    li.textContent =
-      `Food: ${currency.format(dollarsFromCents(totals.food))}  |  Fun: ${currency.format(dollarsFromCents(totals.fun))}  |  Gas: ${currency.format(dollarsFromCents(totals.gas))}`;
-    pendingListEl.appendChild(li);
-  }
-}
 
 function enqueueOfflineBatch(batch) {
   if (!db) return;
   db.transaction('tx','readwrite').objectStore('tx').add(batch);
-  loadPending();
 }
 
 /* =========================================================
@@ -682,13 +624,9 @@ async function submitExpenses(foodDollars, funDollars, gasDollars) {
 
   if (!items.length) return;
 
-  // Local ledger first
   await upsertLedgerItems(items);
-
-  // Outbox for delivery
   enqueueOfflineBatch({ items });
 
-  // Best-effort immediate sync
   if (navigator.onLine) {
     try {
       await syncNow();
@@ -766,7 +704,6 @@ async function syncNow() {
     await apiHealth();
     await pushQueueOnce();
     await pullChanges();
-    loadPending();
   } finally {
     isSyncing = false;
     setNetStatus();
@@ -805,7 +742,7 @@ gasInput.addEventListener('input', updateButtonState);
 
 window.addEventListener('online', () => {
   setNetStatus();
-  syncNow().catch(console.error);
+  syncNow().then(loadSummary).catch(console.error);
 });
 
 window.addEventListener('offline', () => {
@@ -813,9 +750,9 @@ window.addEventListener('offline', () => {
   setNetStatus();
 });
 
-// Periodic sync while app open (lightweight)
+// Periodic sync while app open
 setInterval(() => {
-  if (navigator.onLine) syncNow().catch(() => {});
+  if (navigator.onLine) syncNow().then(loadSummary).catch(() => {});
 }, 25000);
 
 setNetStatus();
